  * PLUS: add jaxb xml libs, which were removed from jdk9+, currently only
    needed by ViewManager extension, document extension and needed deps in
    readme.txt
  * speedup SaveToPostGISPlugIn by delaying gui init
      from
      [INFO] 13:59:36.400 Loading Plugin [...].SaveToPostGISPlugIn took 0.43s 
      to
      [INFO] 14:00:26.666 Loading Plugin [...].SaveToPostGISPlugIn took 0.01s

2018-12-22 Giuseppe Aruta.
   * Updated OpenKLEM to ver 20181222, correct some bugs

2018-12-20 Giuseppe Aruta.
   * Updated OpenKLEM to ver 20181220: patch on displaying raster histogram
   * Correct #483 RasterStyleDialog freezes if the selected raster has only 
     one value
     
2018-12-02 mmichaud <m.michael.michaud@orange.fr>
  * Make IntersectPolygonLayersPlugIn faster

2018-12-01 Giuseppe Aruta.
   * Added a standard icon from Kosmo Saig to RasterLegendPlugIn, 
     WMSLegendPlugIn and (Layer) LegendPlugIn 

2018-11-30 Giuseppe Aruta.
  * Added SaveStylePlugin that allows to save OpenJUMP Style either to SLD file
    or to JUMP XML layer style file <filename.style.xml>. 
    Deactivated "Export style to SLD"
  * Added LoadStylePlugin that allows to load SLD file or JUMP XML layer
    style file as OpenJUMP style.
    Deactivated "Import style from SLD"

2018-11-11 Giuseppe Aruta.
  * Moved LegendPlugIn to Layer>Style and Layer tree>Style menu. 
    Deactivated SaveLegendPlugIn

2018-11-09 Giuseppe Aruta.
  * Added text editor component, to modify  a String in a Text component
  * Added LegendPlugin to display a legend of symbols adopted into the view 

2018-10-12 Nicolas Ribot
  * New mechanism for SpatialDatabasesDSMetadata to get information about
    spatial tables: done in one query, to reduce the number of queries
    sent to the backend (took several minutes on big DB)

2018-10-08 mmichaud <m.michael.michaud@orange.fr>
  * Small fix in Topology extension (Adjust Polygon Boundaries)

2018-10-04 Giuseppe Aruta.
  * Updated OpenKLEM to ver. 20181010: