@@ -15,6 +15,10 @@
       [INFO] 13:59:36.400 Loading Plugin [...].SaveToPostGISPlugIn took 0.43s 
       to
       [INFO] 14:00:26.666 Loading Plugin [...].SaveToPostGISPlugIn took 0.01s
+  * speedup OpenFilePlugIn by delaying gui init and prevent double init
+      [INFO] 14:28:56.280 [...].OpenFilePlugIn took 0.62s
+      to
+      [INFO] 14:42:54.347 [...].OpenFilePlugIn took 0.03s
 
 2018-12-22 Giuseppe Aruta.
    * Updated OpenKLEM to ver 20181222, correct some bugs
